[package]
name = "aiq_live_grep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
axum = "0.5"
chrono = "0.4"
clap = { version = "4.1.6", features = ["derive", "std", "help", "usage", "error-context", "suggestions", "env"], default-features = false }
regex = "1.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
reqwest = "0.11"
